# AI-Enhanced-Game-Analytics-Platform

./: .env.example  .gitignore  BUGFIXES.md  DOCKER_SETUP.md  Dockerfile  JOBS_README.md  Makefile  QUICKSTART.md  README.md  SETUP.md  alembic.ini  check_events.py  check_recent_events.py  dev.ps1  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_analytics.py  test_analytics.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_leaderboard_table.py  003_add_heatmaps_table.py  004_add_hashed_password_to_users.py  005_add_highest_score.py
app/: __init__.py  auth.py  db.py  jobs.py  jwt.py  logging_config.py  main.py  metrics.py  models.py  schemas.py  schemas_auth.py  security.py
app/api/: __init__.py  admin.py  analytics.py  auth.py  events.py  exports.py  heatmap_api.py  leaderboard.py  sessions.py
app/routes/: auth.py  scores.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AuthForm.jsx  GameCanvas.jsx  Leaderboard.jsx
frontend/src/game/: FlappyBird.js  SoundManager.js
frontend/src/pages/: Dashboard.jsx
frontend/src/services/: analytics.js  api.js  auth.js
notebooks/: notebook.ipynb
notebooks/assets/: sample_events.csv  sample_events.parquet
scripts/: check_events.py  etl_aggregate.py  heatmap.py  populate_demo_data.py  seed_events.py  seed_user.py
tests/: test_etl.py  test_events.py  test_sessions.py
